--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <a href="page2.htm">Not Regitered?</a>
 
-            <button id=log></button>
+            <button onclick="log()" id=log></button>
             <button id=facebook></button>
 
 
