index.html modified by Valere

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span> DoYourChoice</span>
 
         </div>
-        <div id=mess>
+        <div id="mess">
             <span> A difficult</span> <span id=choice> choice</span>
 
         </div>
@@ -29,7 +29,7 @@
             <input type="text" id="login" name="name" placeholder="Login..">
             <input type="password" id="password" name="name" placeholder="Password.." required minlength="4" maxlength="8" size="10">
 
-            <a href="page2.htm">Not Regitered?</a>
+            <a href="#">Not Regitered?</a>
 
             <button onclick="log()" id=log></button>
             <button id=facebook></button>
