--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span> DoYourChoice</span>
 
         </div>
-        <div id=mess>
+        <div id="mess">
             <span> A difficult</span> <span id=choice> choice</span>
 
         </div>
