--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR">
 
 <head>
     <meta charset="UTF-8">
@@ -8,34 +8,35 @@
     <script src="jquery-3.4.1.min.js"></script>
     <script src="index.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>A Difficult Choice App</title>
 </head>
 
 <body>
+
     <div id="prin">
+
         <div id="titre">
             <span> DoYourChoice</span>
-
         </div>
+
         <div id="mess">
-            <span> A difficult</span> <span id=choice> choice</span>
-
+            <span>A difficult</span><span id="choice"> choice</span><span> ?</span>
         </div>
+
         <div id="conext">
-            <p>Ask your</p> <span id="friends">friends</span>
-            <p>or the</p> <span id="public">public</span>
-            <p> to help you !</p>
+            <p>Ask your<span id="friends"> friends</span>
+            or the<span id="public"> public</span>
+            to help you !</p>
 
-            <input type="text" id="login" name="name" placeholder="Login..">
-            <input type="password" id="password" name="name" placeholder="Password.." required minlength="4" maxlength="8" size="10">
+            <input type="text" id="login" name="log" placeholder="Login..">
+            <input type="password" id="password" name="pass" placeholder="Password.." required minlength="4" maxlength="8" size="10">
 
-            <a href="#">Not Regitered?</a>
+            <a id = "nr" href="#">Not Registered ?</a>
 
-            <button onclick="log()" id=log></button>
-            <button id=facebook></button>
-
-
+            <button id="log">Log me in</button>
+            <button id="facebook">By Facebook</button>
         </div>
+
     </div>
 
 </body>
